--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -439,22 +439,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.08039401 0.08057525 0.0248571  0.07649316]\n",
-      "  [0.00716578 0.05812711 0.05415792 0.04061217]\n",
-      "  [0.01694527 0.0371208  0.02225066 0.06605728]]\n",
+      "[[[0.04772841 0.01683619 0.02473089 0.01191148]\n",
+      "  [0.01612603 0.02631398 0.07226681 0.05250294]\n",
+      "  [0.02743494 0.04010321 0.03806922 0.01017521]]\n",
       "\n",
-      " [[0.07854177 0.0346634  0.00557722 0.0618603 ]\n",
-      "  [0.01540562 0.04168975 0.02213985 0.02043391]\n",
-      "  [0.01954075 0.08322265 0.04680153 0.00536676]]]\n",
+      " [[0.02319865 0.0586765  0.06628746 0.05739489]\n",
+      "  [0.08915833 0.01943484 0.06614783 0.03027053]\n",
+      "  [0.05576944 0.06874557 0.01103032 0.06968632]]]\n",
       "\n",
       "Marginalizing along dim = 0\n",
-      " [0.5647565 0.4352435]\n",
+      " [0.38419931 0.61580069]\n",
       "\n",
       "Marginalizing along dim = 1\n",
-      " [0.44296222 0.25973209 0.29730569]\n",
+      " [0.30676448 0.37222129 0.32101422]\n",
       "\n",
       "Marginalizing along dim = 2\n",
-      " [0.21799318 0.33539896 0.17578428 0.27082358]\n"
+      " [0.2594158  0.2301103  0.27853252 0.23194138]\n"
      ]
     }
    ],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -581,7 +581,7 @@
    "outputs": [],
    "source": [
     "def move_dimension_first(f, index):\n",
-    "    new_f = f.moveaxis(f, index, 0) \n",
+    "    new_f = np.moveaxis(f, index, 0) \n",
     "    return new_f\n",
     "    "
    ]
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -644,9 +644,10 @@
    "outputs": [],
    "source": [
     "def calc_other_neighbour_msg_prod(sender, receiver):\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    all_neigh_messages = get_neighbour_messages(sender, receiver)\n",
+    "    mu_prods = np.multiply.reduce(np.ix_(*all_neigh_messages))\n",
+    "    print(mu_prods)\n",
+    "    return mu_prods\n",
     "    "
    ]
   },
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -687,9 +688,7 @@
    "outputs": [],
    "source": [
     "def calculate_factor(f_neighb_first, neighbour_msg_prod):\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return f_neighb_first * neighbour_msg_prod\n",
     "    "
    ]
   },
@@ -714,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -731,13 +730,24 @@
    "source": [
     "def calc_sum_product_factor_to_variable_msg(factor, variable):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "    # Get all the neighbour messages\n",
+    "    neighbour_msg_prod = calc_other_neighbour_msg_prod(factor, variable)\n",
+    "    \n",
+    "    # Move x first such that it is (x, x1,....xM)\n",
+    "    f_neighb_first = move_dimension_first(factor.f, factor.neighbours.index(variable))\n",
+    "    \n",
+    "    # Calculate the factors\n",
+    "    factors = calculate_factor(f_neighb_first, neighbour_msg_prod)\n",
+    "    \n",
+    "    # Marginalize out the x from (x, x1,....xM) (ie, dim=0)\n",
+    "    marginal = marginalize(factors, 0)\n",
+    "    \n",
+    "    return marginal\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -772,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -787,7 +797,29 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-5e3f31b401d2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mY_cond\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreceive_msg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mZ\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mZ_prior\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# simulating that Y_cond received all necessary messages from Z\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[0mY_cond\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msend_sp_msg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0min_msgs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0.821024\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.178976\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "### Test test test\n",
     "# message from X_prior to X\n",
