--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -156,15 +156,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab inline\n",
     "\n",
@@ -338,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -365,19 +357,19 @@
     "                 f=np.array([0.8, 0.2]),\n",
     "                 neighbours=[Z])\n",
     "                 \n",
-    "Y = Variable(name='X', num_states=2)\n",
-    "Y_cond = Factor(name='p(Z)',\n",
+    "Y = Variable(name='Y', num_states=2)\n",
+    "Y_cond = Factor(name='p(Y | X, Z)',\n",
     "                 f=np.array([\n",
     "                 [[0.9999, 0.3], [0.1, 0.01]],\n",
     "                 [[0.0001, 0.7], [0.9, 0.99]],\n",
     "                 ]),\n",
-    "                 neighbours=[X, Y, Z])\n",
+    "                 neighbours=[Y, X, Z])  # The order Y, X, Z is necessary to pass the assertion later on!\n",
     "                                \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -421,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -434,30 +426,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0.04772841 0.01683619 0.02473089 0.01191148]\n",
-      "  [0.01612603 0.02631398 0.07226681 0.05250294]\n",
-      "  [0.02743494 0.04010321 0.03806922 0.01017521]]\n",
-      "\n",
-      " [[0.02319865 0.0586765  0.06628746 0.05739489]\n",
-      "  [0.08915833 0.01943484 0.06614783 0.03027053]\n",
-      "  [0.05576944 0.06874557 0.01103032 0.06968632]]]\n",
-      "\n",
-      "Marginalizing along dim = 0\n",
-      " [0.38419931 0.61580069]\n",
-      "\n",
-      "Marginalizing along dim = 1\n",
-      " [0.30676448 0.37222129 0.32101422]\n",
-      "\n",
-      "Marginalizing along dim = 2\n",
-      " [0.2594158  0.2301103  0.27853252 0.23194138]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write a function marginalize that given\n",
     "def marginalize(P, dim):\n",
@@ -508,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -521,16 +490,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def can_send_message(sender, receiver):\n",
     "    for neighbour in sender.neighbours:\n",
@@ -565,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -595,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -628,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -672,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -713,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -747,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -782,7 +742,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Test test test\n",
+    "# message from X_prior to X\n",
+    "X_prior.reset()\n",
+    "X.reset()\n",
+    "\n",
+    "X_prior.send_sp_msg(X)\n",
+    "assert np.allclose(list(X.in_msgs.values()), [0.95, 0.05])\n",
+    "\n",
+    "# message from Z_prior to Z\n",
+    "Z_prior.reset()\n",
+    "Z.reset()\n",
+    "\n",
+    "Z_prior.send_sp_msg(Z)\n",
+    "assert np.allclose(list(Z.in_msgs.values()), [0.8, 0.2])\n",
+    "\n",
+    "# message from Y_cond to Y\n",
+    "Y_cond.reset()\n",
+    "Y.reset()\n",
+    "\n",
+    "Y_cond.receive_msg(X, X_prior.f) # simulating that Y_cond received all necessary messages from X\n",
+    "Y_cond.receive_msg(Z, Z_prior.f) # simulating that Y_cond received all necessary messages from Z\n",
+    "Y_cond.send_sp_msg(Y)\n",
+    "ylist = [list(Y.in_msgs.values())[0][i] for i in range(2)]\n",
+    "assert np.allclose(ylist, [0.821024, 0.178976])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -797,29 +789,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "1.0\n",
-      "[[0.76 0.19]\n",
-      " [0.04 0.01]]\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-5e3f31b401d2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mY_cond\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreceive_msg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mZ\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mZ_prior\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# simulating that Y_cond received all necessary messages from Z\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[0mY_cond\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msend_sp_msg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0min_msgs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0.821024\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.178976\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Test test test\n",
     "# message from X_prior to X\n",
