--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -743,38 +743,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Test test test\n",
-    "# message from X_prior to X\n",
-    "X_prior.reset()\n",
-    "X.reset()\n",
-    "\n",
-    "X_prior.send_sp_msg(X)\n",
-    "assert np.allclose(list(X.in_msgs.values()), [0.95, 0.05])\n",
-    "\n",
-    "# message from Z_prior to Z\n",
-    "Z_prior.reset()\n",
-    "Z.reset()\n",
-    "\n",
-    "Z_prior.send_sp_msg(Z)\n",
-    "assert np.allclose(list(Z.in_msgs.values()), [0.8, 0.2])\n",
-    "\n",
-    "# message from Y_cond to Y\n",
-    "Y_cond.reset()\n",
-    "Y.reset()\n",
-    "\n",
-    "Y_cond.receive_msg(X, X_prior.f) # simulating that Y_cond received all necessary messages from X\n",
-    "Y_cond.receive_msg(Z, Z_prior.f) # simulating that Y_cond received all necessary messages from Z\n",
-    "Y_cond.send_sp_msg(Y)\n",
-    "ylist = [list(Y.in_msgs.values())[0][i] for i in range(2)]\n",
-    "assert np.allclose(ylist, [0.821024, 0.178976])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -856,9 +824,17 @@
    "source": [
     "def calc_sum_product_variable_to_factor_msg(variable, factor):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    "
+    "    # For leaf nodes the message is 1\n",
+    "    if len(variable.neighbours) == 1:\n",
+    "        return np.ones(variable.num_states)\n",
+    "    \n",
+    "    # Otherswise, request messages of the neighbours.\n",
+    "    messages = get_neighbour_messages(variable, factor)\n",
+    "    \n",
+    "    # Element-wise product\n",
+    "    # Only works if all messages to a variable have the same lentgh!\n",
+    "    # Maybe it breakes later ...\n",
+    "    return np.prod(messages, axis=0)"
    ]
   },
   {
