--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -1013,8 +1013,10 @@
    "source": [
     "def marginal(self):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # I tought we had to sum stuff to get to the marginal...\n",
+    "    # marginal = np.sum(list(self.in_msgs.values()))\n",
+    "    marginal = np.multiply.reduce(list(self.in_msgs.values()))\n",
+    "    # print(f\"{self.name}: {self.in_msgs.values()}, m: {marginal}\")\n",
     "    \n",
     "    return marginal\n",
     "\n",
@@ -1110,8 +1112,11 @@
     "def receive_msg(self, other, msg):\n",
     "    self.in_msgs[other] = msg\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # The pending message is added for every node that can send a message.\n",
+    "    for node in self.neighbours:\n",
+    "        if can_send_message(self, node):\n",
+    "            \n",
+    "            self.pending.add(node)\n",
     "    \n",
     "Node.receive_msg = receive_msg\n"
    ]
@@ -1172,11 +1177,30 @@
    },
    "outputs": [],
    "source": [
+    "def one_pass_sum_product(node_list):\n",
+    "    for n, node in enumerate(node_list):\n",
+    "        \n",
+    "        # Only keeps the neighbours that did not send the messages yet (Elegant and readble form!)\n",
+    "        #print(n, node)\n",
+    "        next_neighbours = list(set(node.neighbours) and set(node_list[n:]))\n",
+    "        if node in next_neighbours:\n",
+    "            next_neighbours.remove(node)\n",
+    "        \n",
+    "        for next_neighbour in next_neighbours:\n",
+    "            if can_send_message(node, next_neighbour):\n",
+    "                print(n, node, next_neighbour)\n",
+    "                # Send message\n",
+    "                node.send_sp_msg(next_neighbour)\n",
+    "    \n",
+    "\n",
     "def sum_product(node_list):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    "
+    "    # Forward pass:\n",
+    "    one_pass_sum_product(node_list)\n",
+    "        \n",
+    "    # Backward pass:\n",
+    "    ### Not working yet ###\n",
+    "    one_pass_sum_product(list(reversed(node_list)))"
    ]
   },
   {
