--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -1181,14 +1181,17 @@
     "    for n, node in enumerate(node_list):\n",
     "        \n",
     "        # Only keeps the neighbours that did not send the messages yet (Elegant and readble form!)\n",
-    "        #print(n, node)\n",
-    "        next_neighbours = list(set(node.neighbours) and set(node_list[n:]))\n",
+    "        \n",
+    "        # This implementation keeps the order given in the node_list, \n",
+    "        # the implementation breaks if the order is not respected.\n",
+    "        next_neighbours = [nn for nn in node_list[n:] if nn in set(node.neighbours)]\n",
     "        if node in next_neighbours:\n",
     "            next_neighbours.remove(node)\n",
     "        \n",
     "        for next_neighbour in next_neighbours:\n",
-    "            if can_send_message(node, next_neighbour):\n",
-    "                print(n, node, next_neighbour)\n",
+    "            yes_we_can = can_send_message(node, next_neighbour)\n",
+    "            if yes_we_can:\n",
+    "                # print(n, node, next_neighbour, yes_we_can, isinstance(next_neighbour, Factor))\n",
     "                # Send message\n",
     "                node.send_sp_msg(next_neighbour)\n",
     "    \n",
@@ -1200,7 +1203,7 @@
     "        \n",
     "    # Backward pass:\n",
     "    ### Not working yet ###\n",
-    "    one_pass_sum_product(list(reversed(node_list)))"
+    "    one_pass_sum_product(list(reversed(node_list)))\n"
    ]
   },
   {
