Part 1 finished :tada:

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -822,7 +822,10 @@
    },
    "outputs": [],
    "source": [
-    "def calc_sum_product_variable_to_factor_msg(variable, factor):\n",
+    "def calc_sum_product_variable_to_factor_msg_(variable, factor):\n",
+    "    # This function is called to creat an extra level of abstraction.\n",
+    "    # If the implementation is wrong, then it is enough to modify this function, \n",
+    "    # instead of having to change multiple parts of the notebook.\n",
     "    \n",
     "    # For leaf nodes the message is 1\n",
     "    if len(variable.neighbours) == 1:\n",
@@ -834,7 +837,12 @@
     "    # Element-wise product\n",
     "    # Only works if all messages to a variable have the same lentgh!\n",
     "    # Maybe it breakes later ...\n",
-    "    return np.prod(messages, axis=0)"
+    "    return np.prod(messages, axis=0)\n",
+    "    \n",
+    "\n",
+    "def calc_sum_product_variable_to_factor_msg(variable, factor):\n",
+    "    \n",
+    "    return calc_sum_product_variable_to_factor_msg_(variable, factor)"
    ]
   },
   {
@@ -1011,14 +1019,22 @@
    },
    "outputs": [],
    "source": [
+    "def marginal_(in_msgs_values):\n",
+    "    # One level of abstraction created to avoid reworking multiple spots of the notebook.\n",
+    "    # Note: Very bad practice to make a class function depend of a stand alone function, \n",
+    "    # but I cannot change the Variable class.\n",
+    "    \n",
+    "    return np.multiply.reduce(list(in_msgs_values))\n",
+    "    \n",
+    "\n",
     "def marginal(self):\n",
     "    \n",
-    "    # I tought we had to sum stuff to get to the marginal...\n",
-    "    # marginal = np.sum(list(self.in_msgs.values()))\n",
-    "    marginal = np.multiply.reduce(list(self.in_msgs.values()))\n",
-    "    # print(f\"{self.name}: {self.in_msgs.values()}, m: {marginal}\")\n",
+    "#     # I tought we had to sum stuff to get to the marginal...\n",
+    "#     # marginal = np.sum(list(self.in_msgs.values()))\n",
+    "#     marginal = np.multiply.reduce(list(self.in_msgs.values()))\n",
+    "#     # print(f\"{self.name}: {self.in_msgs.values()}, m: {marginal}\")\n",
     "    \n",
-    "    return marginal\n",
+    "    return marginal_(self.in_msgs.values())\n",
     "\n",
     "Variable.marginal = marginal\n"
    ]
@@ -1264,9 +1280,15 @@
    "outputs": [],
    "source": [
     "def calc_sum_product_variable_to_factor_msg(variable, factor):\n",
+    "    # I feel very unconfortable about over-writing functions in a notebook!\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Requestes the message as before, no obeserved nodes\n",
+    "    not_observed = calc_sum_product_variable_to_factor_msg_(variable, factor)\n",
+    "    \n",
+    "    # Takes the observed state:\n",
+    "    obserseved = not_observed * variable.observed_state\n",
+    "    \n",
+    "    return obserseved\n",
     "    "
    ]
   },
@@ -1319,8 +1341,14 @@
    "source": [
     "def marginal(self):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Calculates the marginal as before\n",
+    "    marginal = marginal_(list(self.in_msgs.values()))\n",
+    "    \n",
+    "    # Takes the observed states into acount\n",
+    "    marginal *= self.observed_state\n",
+    "    \n",
+    "    # Normalize the marginal:\n",
+    "    marginal /= marginal.sum()\n",
     "    \n",
     "    return marginal\n",
     "\n",
