--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -156,7 +156,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "%pylab inline\n",
     "\n",
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -357,19 +365,19 @@
     "                 f=np.array([0.8, 0.2]),\n",
     "                 neighbours=[Z])\n",
     "                 \n",
-    "Y = Variable(name='Y', num_states=2)\n",
-    "Y_cond = Factor(name='p(Y | X, Z)',\n",
+    "Y = Variable(name='X', num_states=2)\n",
+    "Y_cond = Factor(name='p(Z)',\n",
     "                 f=np.array([\n",
     "                 [[0.9999, 0.3], [0.1, 0.01]],\n",
     "                 [[0.0001, 0.7], [0.9, 0.99]],\n",
     "                 ]),\n",
-    "                 neighbours=[Y, X, Z])  # The order Y, X, Z is necessary to pass the assertion later on!\n",
+    "                 neighbours=[Y, X, Z])\n",
     "                                \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -426,7 +434,30 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.07038834 0.00865529 0.03129866 0.04614587]\n",
+      "  [0.00283247 0.02363394 0.0277348  0.03733125]\n",
+      "  [0.07012397 0.06487135 0.07068057 0.05761577]]\n",
+      "\n",
+      " [[0.04834683 0.05998818 0.01225928 0.03675429]\n",
+      "  [0.07071643 0.06169477 0.06710271 0.01266353]\n",
+      "  [0.0138967  0.01044499 0.0514026  0.04341739]]]\n",
+      "\n",
+      "Marginalizing along dim = 0\n",
+      " [0.51131229 0.48868771]\n",
+      "\n",
+      "Marginalizing along dim = 1\n",
+      " [0.31383674 0.30370991 0.38245334]\n",
+      "\n",
+      "Marginalizing along dim = 2\n",
+      " [0.27630474 0.22928852 0.26047862 0.23392811]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a function marginalize that given\n",
     "def marginalize(P, dim):\n",
@@ -477,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -490,7 +521,16 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def can_send_message(sender, receiver):\n",
     "    for neighbour in sender.neighbours:\n",
@@ -525,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -555,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -588,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -632,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -673,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -707,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -742,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -757,7 +797,18 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n"
+     ]
+    }
+   ],
    "source": [
     "### Test test test\n",
     "# message from X_prior to X\n",
@@ -807,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -839,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -874,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -889,7 +940,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "### Test test test\n",
     "Y_cond.reset()\n",
@@ -932,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -946,7 +1006,22 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n",
+      "[[0.8 0.2]\n",
+      " [0.8 0.2]]\n",
+      "[[0.95 0.05]\n",
+      " [0.95 0.05]]\n"
+     ]
+    }
+   ],
    "source": [
     "X_prior.reset()\n",
     "X.reset()\n",
@@ -996,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1012,12 +1087,7 @@
    "outputs": [],
    "source": [
     "def marginal(self):\n",
-    "    \n",
-    "    # I tought we had to sum stuff to get to the marginal...\n",
-    "    # marginal = np.sum(list(self.in_msgs.values()))\n",
     "    marginal = np.multiply.reduce(list(self.in_msgs.values()))\n",
-    "    # print(f\"{self.name}: {self.in_msgs.values()}, m: {marginal}\")\n",
-    "    \n",
     "    return marginal\n",
     "\n",
     "Variable.marginal = marginal\n"
@@ -1025,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1040,7 +1110,18 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n"
+     ]
+    }
+   ],
    "source": [
     "### Test test test\n",
     "# Simulate a single forward pass\n",
@@ -1093,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1123,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1138,7 +1219,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "### Test test test\n",
     "X_prior.reset()\n",
@@ -1162,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1178,19 +1267,10 @@
    "outputs": [],
    "source": [
     "def one_pass_sum_product(node_list):\n",
-    "    for n, node in enumerate(node_list):\n",
-    "        \n",
-    "        # Only keeps the neighbours that did not send the messages yet (Elegant and readble form!)\n",
-    "        #print(n, node)\n",
-    "        next_neighbours = list(set(node.neighbours) and set(node_list[n:]))\n",
-    "        if node in next_neighbours:\n",
-    "            next_neighbours.remove(node)\n",
-    "        \n",
-    "        for next_neighbour in next_neighbours:\n",
-    "            if can_send_message(node, next_neighbour):\n",
-    "                print(n, node, next_neighbour)\n",
-    "                # Send message\n",
-    "                node.send_sp_msg(next_neighbour)\n",
+    "    for node in node_list:\n",
+    "        while len(node.pending)>0:\n",
+    "            factor = node.pending.pop()\n",
+    "            node.send_sp_msg(factor)\n",
     "    \n",
     "\n",
     "def sum_product(node_list):\n",
@@ -1205,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1220,7 +1300,26 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n",
+      "[[0.8 0.2]\n",
+      " [0.8 0.2]]\n",
+      "[[0.95 0.05]\n",
+      " [0.95 0.05]]\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n",
+      "1.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "### Test test test\n",
     "nodes = [X_prior, X, Z_prior, Z, Y_cond, Y]\n",
@@ -1245,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1261,15 +1360,23 @@
    "outputs": [],
    "source": [
     "def calc_sum_product_variable_to_factor_msg(variable, factor):\n",
+    "   # For leaf nodes the message is 1\n",
+    "    if len(variable.neighbours) == 1:\n",
+    "        return np.ones(variable.num_states)\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Otherswise, request messages of the neighbours.\n",
+    "    messages = get_neighbour_messages(variable, factor)\n",
+    "    \n",
+    "    # Element-wise product\n",
+    "    # Only works if all messages to a variable have the same lentgh!\n",
+    "    # Maybe it breakes later ...\n",
+    "    return np.multiply.reduce(messages)*variable.observed_state\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1284,7 +1391,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "### Test, test, test\n",
     "X_prior.reset()\n",
@@ -1299,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1315,18 +1430,17 @@
    "outputs": [],
    "source": [
     "def marginal(self):\n",
+    "    marginal = np.multiply.reduce(list(self.in_msgs.values()))\n",
+    "    marginal*=self.observed_state\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    return marginal\n",
+    "    return marginal/np.sum(marginal)\n",
     "\n",
     "Variable.marginal = marginal\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1341,7 +1455,18 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "[[7.6e-01 1.9e-11]\n",
+      " [4.0e-12 1.0e-22]]\n"
+     ]
+    }
+   ],
    "source": [
     "### Test, test, test\n",
     "# Simulate a single forward pass\n",
@@ -1406,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1421,10 +1546,34 @@
    },
    "outputs": [],
    "source": [
+    "def calc_other_neighbour_msg_sum(sender, receiver):\n",
+    "    messages = get_neighbour_messages(sender, receiver)\n",
+    "    return np.add.reduce(np.ix_(*messages))\n",
+    "\n",
+    "\n",
+    "def calculate_factor_msg(f_neighb_first, neighbour_msg_prod):  \n",
+    "    return np.log(f_neighb_first) + neighbour_msg_prod\n",
+    "\n",
+    "\n",
+    "\n",
+    "def calc_max_sum_factor_to_variable_msg(factor: Factor, variable: Variable):\n",
+    "    \n",
+    "    # Get all the neighbour messages\n",
+    "    messages = calc_other_neighbour_msg_sum(factor, variable)\n",
+    "    \n",
+    "    # Move x first such that it is (x, x1,....xM)\n",
+    "    f_neighb_first = move_dimension_first(factor.f, factor.neighbours.index(variable))\n",
+    "    \n",
+    "    # Calculate the factors\n",
+    "    factors = calculate_factor_msg(f_neighb_first, messages)\n",
+    "    \n",
+    "    axis_to_max = list(range(1, len(factors.shape)))\n",
+    "    return np.max(factors, axis=tuple(axis_to_max))\n",
+    "\n",
+    "    \n",
     "def factor_send_ms_msg(self, variable):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    out_msg = calc_max_sum_factor_to_variable_msg(self, variable)\n",
     "    \n",
     "    # Send the message\n",
     "    variable.receive_msg(self, out_msg)\n",
@@ -1437,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1501,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1517,10 +1666,17 @@
    "outputs": [],
    "source": [
     "# ANSWER 2.2\n",
+    "def calc_max_sum_variable_to_factor_msg(variable, factor):\n",
+    "    if len(variable.neighbours) == 1:\n",
+    "        return np.log(variable.observed_state)\n",
+    "    \n",
+    "    messages = get_neighbour_messages(variable, factor)\n",
+    "    \n",
+    "    return np.add.reduce(messages)+ np.log(variable.observed_state)\n",
+    "\n",
     "def variable_send_ms_msg(self, factor):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    out_msg = calc_max_sum_variable_to_factor_msg(self, factor)\n",
     "    \n",
     "    # Send the message\n",
     "    factor.receive_msg(self, out_msg)\n",
@@ -1533,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1591,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1607,17 +1763,18 @@
    "outputs": [],
    "source": [
     "def unnormalized_log_marginal(self):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    return unnormalized_log_marginal\n",
+    "    unnormalized_log_marginal = 0\n",
+    "    for message in self.in_msgs.values():\n",
+    "        unnormalized_log_marginal += message\n",
+    "\n",
+    "    return unnormalized_log_marginal + np.log(self.observed_state)\n",
     "\n",
     "Variable.unnormalized_log_marginal = unnormalized_log_marginal\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1677,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1692,15 +1849,24 @@
    },
    "outputs": [],
    "source": [
-    "def max_sum(node_list):\n",
+    "def one_pass_max_sum(node_list):\n",
+    "    for node in node_list:\n",
+    "        while len(node.pending)>0:\n",
+    "            factor = node.pending.pop()\n",
+    "            node.send_sp_msg(factor)\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "\n",
+    "def max_sum(node_list):   \n",
+    "    # Forward pass:\n",
+    "    one_pass_max_sum(node_list)\n",
+    "        \n",
+    "    # Backward pass:\n",
+    "    one_pass_max_sum(list(reversed(node_list)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1715,7 +1881,37 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n",
+      "[[0.8 0.2]\n",
+      " [0.8 0.2]]\n",
+      "[[0.95 0.05]\n",
+      " [0.95 0.05]]\n",
+      "[[0.76 0.19]\n",
+      " [0.04 0.01]]\n",
+      "1.0\n",
+      "1.0\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-9d2937769768>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mmax_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munnormalized_log_marginal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m0.27453685\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2.01740615\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "### Test test test: unobserved\n",
     "nodes = [X_prior, X, Z_prior, Z, Y_cond, Y]\n",
