--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -156,7 +156,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "%pylab inline\n",
     "\n",
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -369,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -426,7 +434,30 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.05047878 0.05035498 0.03249676 0.02265932]\n",
+      "  [0.0693566  0.06754659 0.05310231 0.07209209]\n",
+      "  [0.01000098 0.07014724 0.05798115 0.00585039]]\n",
+      "\n",
+      " [[0.05804639 0.07218115 0.02219006 0.00035005]\n",
+      "  [0.01334253 0.00400489 0.03751451 0.06278425]\n",
+      "  [0.05827084 0.03178195 0.00410471 0.07336148]]]\n",
+      "\n",
+      "Marginalizing along dim = 0\n",
+      " [0.5620672 0.4379328]\n",
+      "\n",
+      "Marginalizing along dim = 1\n",
+      " [0.30875748 0.37974378 0.31149874]\n",
+      "\n",
+      "Marginalizing along dim = 2\n",
+      " [0.25949611 0.2960168  0.20738951 0.23709759]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a function marginalize that given\n",
     "def marginalize(P, dim):\n",
@@ -477,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -490,7 +521,16 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def can_send_message(sender, receiver):\n",
     "    for neighbour in sender.neighbours:\n",
@@ -525,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -555,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -588,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -631,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -672,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -706,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -741,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -806,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -838,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -873,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -931,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -995,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1019,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1087,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1119,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1158,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1191,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1231,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1262,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1292,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1328,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1408,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1463,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1527,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1566,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1624,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1651,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1711,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1743,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1776,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1911,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1933,7 +1973,7 @@
     "                 neighbours=[I])\n",
     "\n",
     "F = Variable(name='Fever', num_states=2)\n",
-    "F_cond = Factor(name='p(F)',\n",
+    "F_cond = Factor(name='p(Fever| Influenza)',\n",
     "                 f=np.array(\n",
     "                 [[0.95, 0.1], [0.05, 0.9]],\n",
     "                 ),\n",
@@ -1952,7 +1992,7 @@
     "                 neighbours=[ST, I])\n",
     "\n",
     "B = Variable(name='Bronchitis', num_states=2)\n",
-    "B_cond = Factor(name='p(B)',\n",
+    "B_cond = Factor(name='p(Bronchitis | Influenza, Smokes)',\n",
     "                 f=np.array([\n",
     "                 [[0.9999, 0.3], [0.1, 0.01]],\n",
     "                 [[0.0001, 0.7], [0.9, 0.99]]\n",
@@ -1960,15 +2000,14 @@
     "                 neighbours=[B, I, S])\n",
     "\n",
     "W = Variable(name='Wheezing', num_states=2)\n",
-    "W_cond = Factor(name='p(W)',\n",
+    "W_cond = Factor(name='p(Wheezing|Bronchitis)',\n",
     "                 f=np.array(\n",
     "                 [[0.999, 0.4], [0.001, 0.6]],\n",
     "                 ),\n",
     "                 neighbours=[W, B])\n",
     "\n",
     "C = Variable(name='Coughing', num_states=2)\n",
-    "\n",
-    "C_cond = Factor(name='p(C)',\n",
+    "C_cond = Factor(name='p(Coughing)',\n",
     "                 f=np.array(\n",
     "                 [[0.93, 0.2], [0.07, 0.8]],\n",
     "                 ),\n",
@@ -2015,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2029,10 +2068,29 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SoreThroat set()\n",
+      "Fever set()\n",
+      "Coughing set()\n",
+      "Wheezing set()\n",
+      "Influenza set()\n",
+      "Bronchitis set()\n",
+      "Smokes set()\n",
+      "I   [0.95 0.05]\n",
+      "S   [0.8 0.2]\n",
+      "ST   [0.98405 0.01595]\n",
+      "B   [0.821024 0.178976]\n",
+      "F   [0.9075 0.0925]\n",
+      "C   [0.79934752 0.20065248]\n",
+      "W   [0.89179338 0.10820662]\n"
+     ]
+    }
+   ],
    "source": [
-    "# nodes = [I_prior, I, S_prior, S, ST_cond, ST, B_cond, B, F_cond, F, C_cond, C, W_cond, W]\n",
-    "# [ST, F, C, W, f_I, f_ST, f_F, f_C, f_W, I, B, f_B, S, f_S]\n",
     "nodes = [ST, F, C, W, I_prior, ST_cond, F_cond, C_cond, W_cond, I, B, B_cond, S, S_prior]\n",
     "\n",
     "for n in nodes:\n",
@@ -2047,6 +2105,7 @@
     "\n",
     "sum_product(nodes)\n",
     "\n",
+    "# Checking if all the messages of all nodes are empty\n",
     "for node in nodes:\n",
     "    if isinstance(node, Variable):\n",
     "        print(node.name, node.pending)\n",
@@ -2082,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2096,7 +2155,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I   [1.00000000e+00 5.26315789e-12]\n",
+      "S   [0.8 0.2]\n",
+      "ST   [0.999 0.001]\n",
+      "B   [0.85992 0.14008]\n",
+      "F   [0.95 0.05]\n",
+      "C   [0.8277416 0.1722584]\n",
+      "W   [0.91509208 0.08490792]\n"
+     ]
+    }
+   ],
    "source": [
     "nodes = [ST, F, C, W, I_prior, ST_cond, F_cond, C_cond, W_cond, I, B, B_cond, S, S_prior]\n",
     "\n",
@@ -2163,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2177,7 +2250,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I   [-0.40040184 -4.52024098]\n",
+      "S   [-0.40040184 -2.80366912]\n",
+      "ST   [-0.40040184 -5.36753884]\n",
+      "B   [-0.40040184 -2.80366912]\n",
+      "F   [-0.40040184 -3.34484082]\n",
+      "C   [-0.40040184 -2.80366912]\n",
+      "W   [-0.40040184 -2.80366912]\n"
+     ]
+    }
+   ],
    "source": [
     "nodes = [ST, F, C, W, I_prior, ST_cond, F_cond, C_cond, W_cond, I, B, B_cond, S, S_prior]\n",
     "\n",
@@ -2223,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2237,7 +2324,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I   [ -0.40040184 -27.54609191]\n",
+      "S   [-0.40040184 -2.80366912]\n",
+      "ST   [-0.40040184 -7.30715662]\n",
+      "B   [-0.40040184 -2.80366912]\n",
+      "F   [-0.40040184 -3.34484082]\n",
+      "C   [-0.40040184 -2.80366912]\n",
+      "W   [-0.40040184 -2.80366912]\n"
+     ]
+    }
+   ],
    "source": [
     "nodes = [ST, F, C, W, I_prior, ST_cond, F_cond, C_cond, W_cond, I, B, B_cond, S, S_prior]\n",
     "\n",
