VAE implemented :sunglasses:

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -899,11 +899,8 @@
    },
    "outputs": [],
    "source": [
-    "def log_bernoulli_loss(x_hat, x):\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return loss\n"
+    "def log_bernoulli_loss(x_hat, x): \n",
+    "    return - torch.sum( x * torch.log(x_hat) + (1 - x) * torch.log(1 - x_hat))\n"
    ]
   },
   {
@@ -1009,10 +1006,8 @@
    "outputs": [],
    "source": [
     "def KL_loss(mu, logvar):\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return loss\n"
+    "\n",
+    "    return - 0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp().pow(2))\n"
    ]
   },
   {
@@ -1081,9 +1076,9 @@
    "source": [
     "def loss_function(x_hat, x, mu, logvar):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return loss\n"
+    "    b_loss = log_bernoulli_loss(x_hat, x)\n",
+    "    kl_loss = KL_loss(mu, logvar)\n",
+    "    return b_loss + kl_loss\n"
    ]
   },
   {
@@ -1223,9 +1218,13 @@
    "source": [
     "def encode(self, x):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return mu, logvar\n"
+    "    emb = F.relu(self.fc1(x))\n",
+    "    \n",
+    "    mu = self.fc21(emb)\n",
+    "    \n",
+    "    logvar = self.fc22(emb)\n",
+    "    \n",
+    "    return mu, logvar"
    ]
   },
   {
@@ -1304,10 +1303,12 @@
    },
    "outputs": [],
    "source": [
-    "def reparameterize(self, mu, logvar):\n",
-    "            \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "def reparameterize(self, mu, logvar): \n",
+    "        \n",
+    "        epsilon = torch.randn(mu.shape)\n",
+    "        std = logvar.exp().sqrt()\n",
+    "        z = mu + std * epsilon\n",
+    "        \n",
     "        return z\n"
    ]
   },
@@ -1383,8 +1384,11 @@
    "source": [
     "def decode(self, z):\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    out = self.fc4(F.relu(self.fc3(z)))\n",
+    "    \n",
+    "    # output must be between zero and one, so we give our network some slack:\n",
+    "    x_hat = F.sigmoid(out)\n",
+    "    \n",
     "    return x_hat\n"
    ]
   },
@@ -1460,8 +1464,15 @@
     "def forward(self, x):\n",
     "    x = x.view(-1, 784)\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # get mu and logvar:\n",
+    "    mu, logvar = self.encode(x)\n",
+    "    \n",
+    "    # step into the messy latent space:\n",
+    "    z = self.reparameterize(mu, logvar)\n",
+    "    \n",
+    "    # get image back:\n",
+    "    x_hat = self.decode(z)\n",
+    "    \n",
     "    return x_hat, mu, logvar\n"
    ]
   },
@@ -1593,17 +1604,17 @@
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "# fc1_dims = (?,?)\n",
-    "# fc21_dims =\n",
-    "# fc22_dims =\n",
-    "# fc3_dims =\n",
-    "# fc4_dims =\n",
-    "# lr =\n",
-    "# batch_size =\n",
-    "# epochs =\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "size_X = 784 \n",
+    "size_H = size_X //2 \n",
+    "size_Z = 2  \n",
+    "fc1_dims = (size_X, size_H)\n",
+    "fc21_dims = (size_H, size_Z)\n",
+    "fc22_dims = (size_H, size_Z)\n",
+    "fc3_dims = (size_Z, size_H)\n",
+    "fc4_dims = (size_H, size_X)\n",
+    "lr = 1e-3\n",
+    "batch_size = 1024\n",
+    "epochs = 10"
    ]
   },
   {
@@ -1781,8 +1792,17 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "N = 20\n",
+    "grid = np.linspace(-np.sqrt(3), np.sqrt(3), N)\n",
+    "figures, axes = plt.subplots(N, N, figsize=(14,14))\n",
+    "\n",
+    "for ix, xx in enumerate(grid):\n",
+    "    for iy, yy in enumerate(grid):\n",
+    "        \n",
+    "        z = torch.FloatTensor([xx, yy]).unsqueeze(0)\n",
+    "        x = VAE_MNIST.decode(z).data.numpy()\n",
+    "        axes[ix, iy].imshow(x.reshape(28, -1), cmap='gray_r')\n",
+    "        axes[ix, iy].axis('off')"
    ]
   },
   {
