VAE theory DONE :eyeglasses:

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -966,7 +966,33 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "\n",
+    "\\begin{align} \n",
+    "    KL(q || p) &= - \\int q(\\mathbf{z}) \\ln \\big( \\frac{p(\\mathbf{z})}{q(\\mathbf{z})} \\big)  d\\mathbf{z} \\\\\n",
+    "    &= -\\int q(\\mathbf{z}) \\big( \\ln p(\\mathbf{z}) - q(\\mathbf{z}) \\big) d\\mathbf{z} \\\\\n",
+    "    &= -\\int q(\\mathbf{z}) \\ln p(\\mathbf{z}) d\\mathbf{z} - \\big[ - \\int q(\\mathbf{z}) \\ln q(\\mathbf{z}) d\\mathbf{z} \\big]\n",
+    "\\end{align}\n",
+    "\n",
+    "We can divide the problem in two similar integrals. This kind of integral with normals as functions $p$ and $q$ is known. As derived in homework 2, if $p(\\mathbf{z}) = \\mathcal{N}(\\mathbf{z} | \\mathbf{m}, \\mathbf{L})$ and $q=\\mathcal{N}(\\mathbf{z} | \\boldsymbol{\\mu}, \\boldsymbol{\\Sigma})$, then \n",
+    "\n",
+    "\\begin{align} \n",
+    "    -\\int q(\\mathbf{z}) \\ln p(\\mathbf{z}) d\\mathbf{z} &= \\frac{D}{2} \\ln 2 \\pi +\\frac{1}{2} \\ln |\\mathbf{L}| +\\frac{1}{2} Tr(\\mathbf{L}^{-1} \\boldsymbol{\\Sigma}) +\\frac{1}{2} (\\boldsymbol{\\mu} - \\mathbf{m})^T L^{-1} (\\boldsymbol{\\mu} - \\mathbf{m})   \n",
+    "\\end{align}\n",
+    "\n",
+    "For the variational autoencoder case, we have then \n",
+    "\\begin{align} \n",
+    "    -\\int q(\\mathbf{z}) \\ln p(\\mathbf{z}) d\\mathbf{z} &= \\frac{D}{2} \\ln 2 \\pi +\\frac{1}{2} \\ln |\\mathbf{L}| +\\frac{1}{2} Tr(\\mathbf{L}^{-1} \\boldsymbol{\\Sigma}) +\\frac{1}{2} (\\boldsymbol{\\mu} - \\mathbf{m})^T \\mathbf{L}^{-1} (\\boldsymbol{\\mu} - \\mathbf{m}) \\\\\n",
+    "    &= \\frac{D}{2} \\ln 2 \\pi +\\frac{1}{2} Tr( \\boldsymbol{\\sigma}^2 \\mathbf{I}) +\\frac{1}{2} \\boldsymbol{\\mu} ^T \\boldsymbol{\\mu} \\\\\n",
+    "    &= \\frac{D}{2} \\ln 2 \\pi +\\frac{1}{2} \\sum_{d=1}^{D} (\\sigma_d^2 + \\mu^2)\\ -\\int q(\\mathbf{z}) \\ln q(\\mathbf{z}) d\\mathbf{z}  \\\\\n",
+    "    &= \\frac{D}{2} \\ln 2 \\pi +\\frac{1}{2} \\ln |\\boldsymbol{\\Sigma}| +\\frac{D}{2} \\\\\n",
+    "    &= \\frac{D}{2} \\ln 2 \\pi +\\frac{1}{2} \\sum_{d=1}^{D} \\log \\sigma_d^2 +\\frac{D}{2} \n",
+    "\\end{align}\n",
+    "\n",
+    "Putting it all together:\n",
+    "\n",
+    "\\begin{align}\n",
+    "KL(q||p) = -\\frac{1}{2} \\sum_{d=1}^D \\left(1 + \\ln \\sigma_d^2 - \\sigma_d^2 - \\mu_d^2 \\right)\n",
+    "\\end{align}"
    ]
   },
   {
@@ -1841,8 +1867,17 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "In variational inference, the posterior optimizes a separate variational parameter for each data point, which can be prohibitive in some settings. Amortized variational inference updates a function that maps from the data to the distribution of latent variables. In theory, it is possible to recover any datapoint from given its latent encoding, up to an arbitrary error. \n",
+    "\n",
+    "In the VAE the Encoder performns the amortized inference by mapping datapoints to a latent space"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
